@@ -85,6 +85,7 @@ def build(bld):
                  silence_padding_test.cc
                  skip_frame_test.cc
                  srt_subtitle_test.cc
+                 ssa_subtitle_test.cc
                  stream_test.cc
                  test.cc
                  threed_test.cc
