@@ -1,3 +1,7 @@
+2016-06-13  c.hetherington  <cth@carlh.net>
+
+	* Add button to move things to the start of reels (#798).
+
 2016-06-08  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.8.9 released.
